--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/PrimaryLOGO.jpg" alt="Logo"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_CH2.jpg" alt="Frog"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><a href="AugmentedReality.html"><img class="gallery-images" src="images/GifcARds.png" alt="GifcARds"></a></div>
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_Vermeer.jpg" alt="Painting"></div>
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><a href="3D.html"><img class="gallery-images" src="images/3DMeshMash.png" alt="3D Mesh Mash"></a></div>
+								<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_Paint copy.jpg" alt="Golden Gate Painting"></div>
 
+				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_Vermeer.jpg" alt="Painting"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/lionking1.jpg" alt="3D art"></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><a href="GlitchArt.html"><img class="gallery-images" src="images/GlitchArt.jpg" alt="Glitch Art"></a></div>
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><a href="3D.html"><img class="gallery-images" src="images/3DMeshMash.png" alt="3D Mesh Mash"></a></div>
 				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_5UP copy.jpg" alt="5 up animated picture"></div>
-				<div class="col col-phone-6 col-tablet-4 col-desktop-3"><img class="gallery-images" src="images/GarciaM_Paint copy.jpg" alt="Golden Gate Painting"></div>
 				<div class="clearfix visible-mobile"></div>
 				<div class="clearfix visible-tablet"></div>
 				<div class="clearfix visible-desktop"></div>
@@ -84,7 +84,7 @@
 
 	<div class="container">
 		<p>Link to HyperLink Website!</p>
-			<li><p><a class="links" href="CozumelTrip/index.html" target="_blank"> Cozumel Website</a></p></li>
+			<li><p><a class="links" href="CozumelTrip/index.html" target="_blank"> Cozumel Website</a>(For this project, I used HMTL and CSS, main goal was to create publicity to the city of Cozumel, Mexico)</p></li>
 	</div>
 
 
