--- a/3D.html
+++ b/3D.html
@@ -9,7 +9,7 @@
 
 <body>
   <iframe src="sketch.html" id="animation"></iframe>
-  <h1>3D MeshMash</h1>
+  <h1>Stoplight</h1>
   <a href="https://skfb.ly/6JtGH"><img id="skull" src="images/3DMeshMash.png" alt="3DMeshMash" target="_blank"></a>
   <h3>Title: Roses turn you into a skull</h3>
   <h3>Medium: Virtual 3D Sculpture</h3>
@@ -19,15 +19,11 @@
   <li>Poly - Roses and Skull</li>
 
   <h2>Description:</h2>
-  <p>For this project I focus myself in getting trying to add objects into the skull, Ive always been a fan of skull and roses tattoos, I wanted to recreate something I would like tattoo myself in the near future. I also tried to create something
-    abstract because sometimes it just works out randomly without expecting it. I used a skull and put two roses one in each eye. I also added a horn to the skull because it just looked cool and using meshmixer I used one of the layers that it
-    provides to set it kind of as a stand. Putting this project took quite the energy because I wanted something people would feel triggered to look and wanting to interract. Overall I am happy with my final piece.</p>
+  <p></p>
 
   <a class="button button-primary" href="index.html" target="_blank">Home</a>
 
 
-  <p>Using three objects/forms that are from both existing and found (downloaded from the internet) sources, mix together a virtual 3D sculpture using Meshmixer. Design the impossible! Your mashup may be an exciting re-interpretation of a classic
-    form or even a chaotic mess made of organic and/or geometric designs. You are also required to visualize the purpose and "story" behind the objects that you choose to model.</p>
 </body>
 
 </html>
