--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 	<div class="container">
 		<p>Link to HyperLink Website!</p>
 			<li><p><a class="links" href="CozumelTrip/index.html" target="_blank"> Cozumel Website</a>(Used HMTL and CSS, main goal to create publicity to the city of Cozumel, Mexico)</p></li>
-			<li><p><a class="links" href="stoplight.html" target="_blank"> P5 animation</a>(This is an animation using p5.js-- Press any of this letters R, Y, G!! )</p></li>
+			<li><p><a class="links" href="stoplight/index.html" target="_blank"> P5 animation</a>(This is an animation using p5.js-- Press any of this letters R, Y, G!! )</p></li>
 	</div>
 
 
