--- a/index.html
+++ b/index.html
@@ -90,9 +90,14 @@
 
 
 	<div class="container">
-		<p>Links to Video Installation projects</p>
+		<p>Art 75</p>
 			<li><p><a class="links" href="https://youtu.be/OO82JY_L9Dk" target="_blank"> Abstract Video</a></p></li>
 			<li><p><a class="links" href="https://youtu.be/x0MDzRj1Nyo" target="_blank"> Video as Installation</a></p></li>
+			<div class="col col-phone-6 col-tablet-4 col-desktop-3"><a href="GarciaMarlon_criticalInteractivity/index.html"><img class="gallery-images" src="images/critical_interactivity.png" alt="Project #3"></a></div>
+			<div class="col col-phone-6 col-tablet-4 col-desktop-3"><a href="GarciaMarlon_Final/index.html"><img class="gallery-images" src="images/final.png" alt="Final Project"></a></div>
+			<div class="clearfix visible-mobile"></div>
+			<div class="clearfix visible-tablet"></div>
+			<div class="clearfix visible-desktop"></div>
 	</div>
 <!--	<section id="contact" class="contactform">
 		<div class="container">
