--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
 
 
 	<div class="container">
-		<p>Link to HyperLink Website!</p>
-			<li><p><a class="links" href="CozumelTrip/index.html" target="_blank"> Cozumel Website</a>(Used HMTL and CSS, main goal to create publicity to the city of Cozumel, Mexico)</p></li>
-			<li><p><a class="links" href="stoplight/index.html" target="_blank"> P5 animation</a>(This is an animation using p5.js-- Press any of this letters R, Y, G!! )</p></li>
+		<p>Link to HyperLink Website! and P5.JS</p>
+			<li><p><a class="links" href="CozumelTrip/index.html" target="_blank"> Cozumel Website</a> (Used HMTL and CSS, main goal to create publicity to the city of Cozumel, Mexico)</p></li>
+			<li><p><a class="links" href="stoplight/index.html" target="_blank">Stoplight</a> (This is an animation using p5.js-- Press any of this letters R, Y, G!! )</p></li>
 	</div>
 
 
 	<div class="container">
 		<p>Art 75</p>
-			<li><p><a class="links" href="https://youtu.be/OO82JY_L9Dk" target="_blank"> Abstract Video</a></p></li>
-			<li><p><a class="links" href="https://youtu.be/x0MDzRj1Nyo" target="_blank"> Video as Installation</a></p></li>
+			<li><p><a class="links" href="https://youtu.be/OO82JY_L9Dk" target="_blank"> "Abstracity"</a> (abstract Video)</p></li>
+			<li><p><a class="links" href="https://youtu.be/x0MDzRj1Nyo" target="_blank"> "Encounter"</a> (Video As Installation)</p></li>
 			<div class="col col-phone-6 col-tablet-4 col-desktop-3"><a href="GarciaMarlon_criticalInteractivity/index.html"><img class="gallery-images" src="images/critical_interactivity.png" alt="Project #3"></a></div>
 			<div class="col col-phone-6 col-tablet-4 col-desktop-3"><a href="GarciaMarlon_Final/index.html"><img class="gallery-images" src="images/final.png" alt="Final Project"></a></div>
 			<div class="clearfix visible-mobile"></div>
