--- a/stoplight/index.html
+++ b/stoplight/index.html
@@ -18,5 +18,6 @@
   <p>For this project I tried making a stoping light. I also added the when pressed botton function to the lights to give it a better effect. You can press either R for the Red Light, Y for the Yellow Light and G for the Green Light!</p>
 
 <a class="button button-primary" href="MarlonGarciaGarcia.github.io/index.html" target="_blank">Home</a>
+<a class="button button-primary" href="index.html" target="_blank">Home</a>
 </body>
 </html>
